Remove some un needed stuff from frontend

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,7 +1,7 @@
 html {
-    background-color: rgba(27, 38, 54, 1);
-    text-align: center;
-    color: white;
+/*    background-color: rgba(27, 38, 54, 1);*/
+/*    text-align: center;*/
+/*    color: white;*/
 }
 
 body {
