--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,15 +1,7 @@
-html {
-/*    background-color: rgba(27, 38, 54, 1);*/
-/*    text-align: center;*/
-/*    color: white;*/
-}
-
 body {
     margin: 0;
     color: white;
-    font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    font-family: "Nunito", "Roboto";
 }
 
 @font-face {
@@ -20,7 +12,3 @@ body {
     url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
 }
 
-#app {
-    height: 100vh;
-    text-align: center;
-}
