--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,22 +1,32 @@
 #App {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    border: 2px solid #000000;
+    border-radius: 20px;
+    opacity: 1.0;
 }
 
 #input {
-    width: 100%;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    padding: 5px;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 20px 20px 0 0;
+    background-color: #1D212F;
 }
 
 .search-input {
+    flex: 1;
     width: 98%;
     padding: 8px;
     border: none;
     outline: none;
     font-size: 24px;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+    font-family: Arial;
+    color: #FFFFFF;
+    background-color: #1D212F;
+}
+
+#results {
+    width: 98%;
+
 }
