--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,16 @@
 #App {
     display: flex;
     flex-direction: column;
-    border: 2px solid #000000;
+    border: 2px solid #151721;
     border-radius: 20px;
-    opacity: 1.0;
 }
 
 #input {
+    opacity: 0.7;
     padding: 10px;
-    border-radius: 20px 20px 0 0;
+    border-radius: 15px 15px 0 0;
     background-color: #1D212F;
+    box-shadow: 0 1px 1px #151721;
 }
 
 .search-input {
@@ -27,6 +28,12 @@
 }
 
 #results {
-    width: 98%;
+    opacity: 1;
+    width: 100%;
+    background-color: #1D212F;
+    border-radius: 0 0 15px 15px;
+}
 
+#results h1 {
+    margin-left: 10px;
 }
