--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     border: 2px solid #151721;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 #input {
     opacity: 0.7;
     padding: 10px;
-    border-radius: 15px 15px 0 0;
+    border-radius: 7px 7px 0 0;
     background-color: #1D212F;
     box-shadow: 0 1px 1px #151721;
 }
@@ -22,19 +22,21 @@
     font-size: 24px;
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
-    font-family: Arial;
     color: #FFFFFF;
     background-color: #1D212F;
 }
 
-#results {
+#footer {
     opacity: 1;
     width: 100%;
     background-color: #1D212F;
-    border-radius: 0 0 15px 15px;
+    border-radius: 0 0 5px 5px;
 }
 
-#results h1 {
+#footer h1 {
     margin-left: 10px;
-    font-size: 24px;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    opacity: 0.3;
 }
