--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,10 @@
     border-radius: 10px;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 #input {
     opacity: 0.7;
     padding: 10px;
@@ -27,6 +31,8 @@
 }
 
 #results {
+    overflow-y: auto;
+    max-height: 205px;
     background-color: #1D212F;
 }
 
@@ -38,6 +44,7 @@
 }
 
 #resultcard button {
+    flex-basis: calc(33.33% - 16px);
     flex-grow: 1;
     display: flex;
     align-items: center;
@@ -48,7 +55,6 @@
     outline: none;
     cursor: pointer;
 }
-
 
 #resultcard button:active {
     background-color: #1F2433;
