--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: #1D212F;
+    --secondary-color: #1a1e2b;
+    --highlight-color: #1F2433;
+}
+
 #App {
     display: flex;
     flex-direction: column;
@@ -13,7 +19,7 @@
     opacity: 0.7;
     padding: 10px;
     border-radius: 7px 7px 0 0;
-    background-color: #1D212F;
+    background-color: var(--primary-color);
     box-shadow: 0 1px 1px #151721;
 }
 
@@ -24,22 +30,19 @@
     border: none;
     outline: none;
     font-size: 24px;
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
+    margin: 0.25rem 0;
     color: #FFFFFF;
-    background-color: #1D212F;
+    background-color: var(--primary-color);
 }
 
 #results {
     overflow-y: auto;
     max-height: 205px;
-    background-color: #1D212F;
+    background-color: var(--primary-color);
 }
 
 #resultcard {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 8px;
+    margin: 8px 20px;
     display: flex;
 }
 
@@ -50,14 +53,14 @@
     align-items: center;
     padding: 15px;
     border-radius: 10px;
-    background-color: #1a1e2b;
+    background-color: var(--secondary-color);
     border: none;
     outline: none;
     cursor: pointer;
 }
 
 #resultcard button:active {
-    background-color: #1F2433;
+    background-color: var(--highlight-color);
 }
 
 #resultcard img {
