--- a/frontend/src/themes/cherry-blossom.css
+++ b/frontend/src/themes/cherry-blossom.css
@@ -28,6 +28,10 @@
     box-shadow: 0 1px 1px var(--accent-color);
 }
 
+#search-bar::placeholder {
+    color: var(--search-text-color);
+}
+
 .search-input {
     flex: 1;
     width: 98%;
