--- a/frontend/src/themes/cherry-blossom-theme.css
+++ b/frontend/src/themes/cherry-blossom-theme.css
@@ -36,10 +36,6 @@
     box-shadow: 0 1px 1px var(--accent-color);
 }
 
-#search-bar::placeholder {
-    color: var(--search-text-color);
-}
-
 .search-input {
     flex: 1;
     width: 98%;
@@ -142,6 +138,7 @@
 }
 
 /*Extra CSS used in Settings:*/
+
 .header-div {
     border-radius: 7px 7px 0 0;
     padding: 20px;
@@ -162,6 +159,14 @@
     opacity: 0.7;
 }
 
+.header-div hr.rounded {
+    border: none;
+    height: 3px;
+    border-radius: 2px;
+    margin-bottom: 0;
+    background-color: var(--accent-color);
+}
+
 .dropdown-container {
     background-color: var(--primary-color);
     display: flex;
@@ -169,6 +174,8 @@
 }
 
 .dropdown-container h2 {
+    font-size: 20px;
+    font-weight: 400;
     margin-top: 0;
     margin-left: 20px;
     margin-bottom: 10px;
@@ -193,3 +200,26 @@ select {
     margin-left: 20px;
 }
 
+
+.dangerous-actions-container {
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px
+}
+
+.dangerous-actions-container h2 {
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.dangerous-actions-container button {
+    padding: 7px 10px;
+    font-size: 16px;
+    background-color: #fe384c;
+    color: var(--search-text-color);
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
