--- a/frontend/src/themes/default-theme.css
+++ b/frontend/src/themes/default-theme.css
@@ -189,17 +189,24 @@
 }
 
 select {
-    padding: 12px;
-    font-size: 16px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding: 14px;
+    font-size: 17px;
     background-color: var(--highlight-color);
     color: var(--search-text-color);
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     outline: none;
     margin-right: 20px;
     margin-left: 20px;
+    background-size: 20px;
 }
 
+select option {
+    padding: 8px 12px;
+}
 
 .dangerous-actions-container {
     margin-left: 20px;
