--- a/frontend/src/themes/default-theme.css
+++ b/frontend/src/themes/default-theme.css
@@ -150,7 +150,7 @@
     margin-top: 0;
     margin-bottom: 10px;
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .header-div p {
