--- a/frontend/src/themes/default-theme.css
+++ b/frontend/src/themes/default-theme.css
@@ -204,10 +204,6 @@ select {
     background-size: 20px;
 }
 
-select option {
-    padding: 8px 12px;
-}
-
 .dangerous-actions-container {
     margin-left: 20px;
     margin-top: 10px;
@@ -228,5 +224,6 @@ select option {
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    box-shadow: none;
     transition: background-color 0.2s;
 }
