--- a/frontend/src/default-theme.css
+++ b/frontend/src/default-theme.css
@@ -302,3 +302,8 @@ select {
     transition: background-color 0.2s;
 }
 
+.information-container {
+    margin-left: auto;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
